k8s-home/unifi/controller/unifi.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi
  namespace: unifi
  labels:
    app.kubernetes.io/name: unifi
    app.kubernetes.io/instance: home
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
spec:
  selector:
    app.kubernetes.io/name: unifi
    app.kubernetes.io/instance: home
  ports:
  - name: informer
    port: 8080
    targetPort: 8080
    protocol: TCP
  - name: ui
    port: 8443
    targetPort: 8443
    protocol: TCP
  - name: stun
    port: 3478
    targetPort: 3478
    protocol: UDP
  - name: discovery
    port: 10001
    targetPort: 10001
    protocol: UDP
  - name: l2discovery
    port: 1900
    targetPort: 1900
    protocol: UDP
  - name: httpsportal
    port: 8843
    targetPort: 8843
    protocol: TCP
  - name: httpportal
    port: 8880
    targetPort: 8800
    protocol: TCP
  - name: mobilespeed
    port: 6789
    targetPort: 6789
    protocol: TCP
  - name: remotesyslog
    port: 5514
    targetPort: 5514
    protocol: UDP
---
apiVersion: v1
kind: Service
metadata:
  name: unifi-public
  namespace: unifi
  labels:
    app.kubernetes.io/name: unifi
    app.kubernetes.io/instance: home
spec:
  externalTrafficPolicy: Local
  type: LoadBalancer
  sessionAffinity: None
  ipFamilyPolicy: RequireDualStack
  ipFamilies:
  - IPv4
  - IPv6
  selector:
    app.kubernetes.io/name: unifi
    app.kubernetes.io/instance: home
  ports:
  - name: informer
    port: 8080
    targetPort: 8080
    protocol: TCP
  - name: stun
    port: 3478
    targetPort: 3478
    protocol: UDP
  - name: discovery
    port: 10001
    targetPort: 10001
    protocol: UDP
  - name: l2discovery
    port: 1900
    targetPort: 1900
    protocol: UDP
  - name: httpsportal
    port: 8843
    targetPort: 8843
    protocol: TCP
  - name: httpportal
    port: 8880
    targetPort: 8800
    protocol: TCP
  - name: mobilespeed
    port: 6789
    targetPort: 6789
    protocol: TCP
  - name: remotesyslog
    port: 5514
    targetPort: 5514
    protocol: UDP
