k8s-home/unifi/controller/unifi.ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unifi
  namespace: unifi
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  ingressClassName: nginx
  rules:
    - host: unifi.home.frickel.earth
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: unifi
                port:
                  number: 8443
  tls:
    - hosts:
        - unifi.home.frickel.earth
      secretName: wildcard.home.frickel.earth-prod
